--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>in.javahome</groupId>
 	<artifactId>simple-app</artifactId>
 	<packaging>war</packaging>
-	<version>3.1.0-RELEASE</version>
+	<version>4.1.0-SNAPSHOT</version>
 	<name>simple-app</name>
 	<url>http://maven.apache.org</url>
 	<properties>
